# ExoVista

./: .gitignore  ExoVistaSystem.py  pyproject.toml  run_ExoVista.py  setup.py
ExoVista/: .gitignore  generate_planets.py  generate_scene.py  load_stars.py  nbody.py  read_solarsystem.py  wrapImage.cpp  wrapImage.pyx  wrapIntegrator.cpp  wrapIntegrator.pyx
ExoVista/data/: master_list.csv
misc/: parsefits.py
src/: constants.py  generate_disks.py
